...
              ),
              InkWell(
                onTap: onSkip,
                child: Padding(
                  padding: const EdgeInsets.all(6),
                  child: Text(
                    'SKIP',
                    style: theme.textTheme.labelSmall?.copyWith(
                      color: theme.colorScheme.onSurfaceVariant,
                    ),
                  ),
                ),
              ),
...
